--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -274,81 +274,121 @@
           เพราะเป้าหมายของเรา คือให้คุณได้พักอย่างปลอดภัย
         </p>
 
-        <div class="productGrid grid-2x2">
+       <div class="productGrid grid-2x2">
 
-          <div class="card cardGold">
-            <h3>โซลซิงค์ อัลฟา 30 นาที</h3>
-            <p class="price">___ บาท</p>
-            <ul>
-              <li>พักใจระหว่างวัน</li>
-              <li>คลายล้า • ปรับโหมดสมองให้นุ่ม</li>
-              <li>เหมาะก่อนทำงาน/อ่านหนังสือ</li>
-            </ul>
-            <p class="small">
-              เหมาะสำหรับคนที่อยากเริ่ม “ฝึกพัก” แบบง่าย ๆ  
-              โดยไม่ต้องใช้พลังเยอะ
-            </p>
-            <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
-              สั่งซื้อ
-            </a>
-          </div>
+  <!-- 1) Alpha 30 -->
+  <div class="card cardGold productCard">
+    <div class="productCard__media">
+      <img
+        src="assets/images/products/brainwaves/soulsync-alpha-30.webp"
+        alt="โซลซิงค์ อัลฟา 30 นาที"
+        class="productCard__img"
+        loading="lazy"
+      />
+    </div>
 
-          <div class="card cardGold">
-            <h3>โซลซิงค์ อัลฟา 60 นาที</h3>
-            <p class="price">___ บาท</p>
-            <ul>
-              <li>Deep Rest • รีเซ็ตระบบประสาท</li>
-              <li>เหมาะช่วงเย็น–ก่อนนอน</li>
-              <li>เหมาะวันทำงานหนัก/เครียดสะสม</li>
-            </ul>
-            <p class="small">
-              เหมาะสำหรับวันที่คุณ “ล้าเกินกว่าจะคิด”  
-              แต่อยากให้ใจได้พักลึกแบบอ่อนโยน
-            </p>
-            <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
-              สั่งซื้อ
-            </a>
-          </div>
+    <h3>โซลซิงค์ อัลฟา 30 นาที</h3>
+    <p class="price">___ บาท</p>
+    <ul>
+      <li>พักใจระหว่างวัน</li>
+      <li>คลายล้า • ปรับโหมดสมองให้นุ่ม</li>
+      <li>เหมาะก่อนทำงาน/อ่านหนังสือ</li>
+    </ul>
+    <p class="small">
+      เหมาะสำหรับคนที่อยากเริ่ม “ฝึกพัก” แบบง่าย ๆ
+      โดยไม่ต้องใช้พลังเยอะ
+    </p>
+    <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+      สั่งซื้อ
+    </a>
+  </div>
 
-          <div class="card cardGold recommended">
-            <div class="badge">แนะนำ</div>
-            <h3>โซลซิงค์ ธีตา 30 นาที</h3>
-            <p class="price">___ บาท</p>
-            <ul>
-              <li>ภาวนา • งานภายใน • นุ่มลึก</li>
-              <li>เหมาะ journaling + affirmation</li>
-              <li>เหมาะคืนที่ใจต้องการปลอบโยน</li>
-            </ul>
-            <p class="small">
-              เหมาะสำหรับผู้ที่อยากกลับเข้าหาหัวใจ  
-              และปล่อยให้ความสงบ “พาไปเอง”
-            </p>
-            <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
-              สั่งซื้อ
-            </a>
-          </div>
+  <!-- 2) Alpha 60 -->
+  <div class="card cardGold productCard">
+    <div class="productCard__media">
+      <img
+        src="assets/images/products/brainwaves/soulsync-alpha-60.webp"
+        alt="โซลซิงค์ อัลฟา 60 นาที"
+        class="productCard__img"
+        loading="lazy"
+      />
+    </div>
 
-          <div class="card cardGold bestSellerCard">
-            <div class="badge bestSeller">Best Seller</div>
-            <h3>โซลซิงค์ ธีตา 60 นาที</h3>
-            <p class="price">___ บาท</p>
-            <ul>
-              <li>พักลึกระดับสนามพลัง</li>
-              <li>เหมาะก่อนนอน/วันอารมณ์หน่วง</li>
-              <li>เหมาะทำเป็นพิธีส่วนตัว (ritual)</li>
-            </ul>
-            <p class="small">
-              เหมาะสำหรับผู้ที่ต้องการ “พักลึกจริง”  
-              ให้ใจวางลงอย่างสมบูรณ์ในค่ำคืน
-            </p>
-            <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
-              สั่งซื้อ
-            </a>
-          </div>
+    <h3>โซลซิงค์ อัลฟา 60 นาที</h3>
+    <p class="price">___ บาท</p>
+    <ul>
+      <li>Deep Rest • รีเซ็ตระบบประสาท</li>
+      <li>เหมาะช่วงเย็น–ก่อนนอน</li>
+      <li>เหมาะวันทำงานหนัก/เครียดสะสม</li>
+    </ul>
+    <p class="small">
+      เหมาะสำหรับวันที่คุณ “ล้าเกินกว่าจะคิด”
+      แต่อยากให้ใจได้พักลึกแบบอ่อนโยน
+    </p>
+    <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+      สั่งซื้อ
+    </a>
+  </div>
 
-        </div>
+  <!-- 3) Theta 30 (recommended) -->
+  <div class="card cardGold recommended productCard">
+    <div class="badge">แนะนำ</div>
 
-      </div>
+    <div class="productCard__media">
+      <img
+        src="assets/images/products/brainwaves/soulsync-theta-30.webp"
+        alt="โซลซิงค์ ธีตา 30 นาที"
+        class="productCard__img"
+        loading="lazy"
+      />
+    </div>
+
+    <h3>โซลซิงค์ ธีตา 30 นาที</h3>
+    <p class="price">___ บาท</p>
+    <ul>
+      <li>ภาวนา • งานภายใน • นุ่มลึก</li>
+      <li>เหมาะ journaling + affirmation</li>
+      <li>เหมาะคืนที่ใจต้องการปลอบโยน</li>
+    </ul>
+    <p class="small">
+      เหมาะสำหรับผู้ที่อยากกลับเข้าหาหัวใจ
+      และปล่อยให้ความสงบ “พาไปเอง”
+    </p>
+    <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+      สั่งซื้อ
+    </a>
+  </div>
+
+  <!-- 4) Theta 60 (best seller) -->
+  <div class="card cardGold bestSellerCard productCard">
+    <div class="badge bestSeller">Best Seller</div>
+
+    <div class="productCard__media">
+      <img
+        src="assets/images/products/brainwaves/soulsync-theta-60.webp"
+        alt="โซลซิงค์ ธีตา 60 นาที"
+        class="productCard__img"
+        loading="lazy"
+      />
+    </div>
+
+    <h3>โซลซิงค์ ธีตา 60 นาที</h3>
+    <p class="price">___ บาท</p>
+    <ul>
+      <li>พักลึกระดับสนามพลัง</li>
+      <li>เหมาะก่อนนอน/วันอารมณ์หน่วง</li>
+      <li>เหมาะทำเป็นพิธีส่วนตัว (ritual)</li>
+    </ul>
+    <p class="small">
+      เหมาะสำหรับผู้ที่ต้องการ “พักลึกจริง”
+      ให้ใจวางลงอย่างสมบูรณ์ในค่ำคืน
+    </p>
+    <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+      สั่งซื้อ
+    </a>
+  </div>
+
+</div>
     </section>
 
     <!-- ================================
