--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -298,7 +298,7 @@
       เหมาะสำหรับคนที่อยากเริ่ม “ฝึกพัก” แบบง่าย ๆ
       โดยไม่ต้องใช้พลังเยอะ
     </p>
-    <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+    <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007891642" target="_blank" rel="noopener">
       สั่งซื้อ
     </a>
   </div>
@@ -325,7 +325,7 @@
       เหมาะสำหรับวันที่คุณ “ล้าเกินกว่าจะคิด”
       แต่อยากให้ใจได้พักลึกแบบอ่อนโยน
     </p>
-    <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+    <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007891645" target="_blank" rel="noopener">
       สั่งซื้อ
     </a>
   </div>
@@ -354,7 +354,7 @@
       เหมาะสำหรับผู้ที่อยากกลับเข้าหาหัวใจ
       และปล่อยให้ความสงบ “พาไปเอง”
     </p>
-    <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+    <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007891768" target="_blank" rel="noopener">
       สั่งซื้อ
     </a>
   </div>
@@ -383,7 +383,7 @@
       เหมาะสำหรับผู้ที่ต้องการ “พักลึกจริง”
       ให้ใจวางลงอย่างสมบูรณ์ในค่ำคืน
     </p>
-    <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+    <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007891777" target="_blank" rel="noopener">
       สั่งซื้อ
     </a>
   </div>
