--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -26,7 +26,8 @@
 
   <!-- Product page specific -->
   <link rel="stylesheet" href="assets/css2/pages/shop-brainwaves.css">
-
+  <link rel="stylesheet" href="assets/css2/pages/shop-brainwaves.fix.css">
+  
   <script src="assets/main.js" defer></script>
 </head>
 
