--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -288,7 +288,7 @@
     </div>
 
     <h3>โซลซิงค์ อัลฟา 30 นาที</h3>
-    <p class="price">___ บาท</p>
+    <p class="price">990 บาท</p>
     <ul>
       <li>พักใจระหว่างวัน</li>
       <li>คลายล้า • ปรับโหมดสมองให้นุ่ม</li>
@@ -315,7 +315,7 @@
     </div>
 
     <h3>โซลซิงค์ อัลฟา 60 นาที</h3>
-    <p class="price">___ บาท</p>
+    <p class="price">1290 บาท</p>
     <ul>
       <li>Deep Rest • รีเซ็ตระบบประสาท</li>
       <li>เหมาะช่วงเย็น–ก่อนนอน</li>
@@ -344,7 +344,7 @@
     </div>
 
     <h3>โซลซิงค์ ธีตา 30 นาที</h3>
-    <p class="price">___ บาท</p>
+    <p class="price">990 บาท</p>
     <ul>
       <li>ภาวนา • งานภายใน • นุ่มลึก</li>
       <li>เหมาะ journaling + affirmation</li>
@@ -373,7 +373,7 @@
     </div>
 
     <h3>โซลซิงค์ ธีตา 60 นาที</h3>
-    <p class="price">___ บาท</p>
+    <p class="price">1290 บาท</p>
     <ul>
       <li>พักลึกระดับสนามพลัง</li>
       <li>เหมาะก่อนนอน/วันอารมณ์หน่วง</li>
