--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -299,7 +299,7 @@
       โดยไม่ต้องใช้พลังเยอะ
     </p>
     <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007891642" target="_blank" rel="noopener">
-      สั่งซื้อ
+      สั่งซื้อแพ็กนี้
     </a>
   </div>
 
@@ -326,7 +326,7 @@
       แต่อยากให้ใจได้พักลึกแบบอ่อนโยน
     </p>
     <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007891645" target="_blank" rel="noopener">
-      สั่งซื้อ
+      สั่งซื้อแพ็กนี้
     </a>
   </div>
 
