--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -355,7 +355,7 @@
       และปล่อยให้ความสงบ “พาไปเอง”
     </p>
     <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007891768" target="_blank" rel="noopener">
-      สั่งซื้อ
+      สั่งซื้อแพ็กนี้
     </a>
   </div>
 
@@ -384,7 +384,7 @@
       ให้ใจวางลงอย่างสมบูรณ์ในค่ำคืน
     </p>
     <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007891777" target="_blank" rel="noopener">
-      สั่งซื้อ
+      สั่งซื้อแพ็กนี้
     </a>
   </div>
 
