--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -406,7 +406,7 @@
 
           <div class="ctaRow">
             <a class="btn primary" href="#products">
-              เลือกคลื่น
+              เลือกคลื่นเลือกคลื่น…แล้วปล่อยให้หัวใจนำทาง
             </a>
             <a class="btn" href="shop.html">
               กลับไปหน้าร้านค้า
