--- a/shop-brainwaves 1.html
+++ b/shop-brainwaves 1.html
@@ -135,45 +135,59 @@
   <!-- MAIN (โครงเดียวกับหน้า eBook Package แต่เปลี่ยนเนื้อหาเป็น Brainwaves) -->
   <main class="pageMain ebookPage">
 
-    <!-- ================================
-         HERO PRODUCT
-         ================================ -->
-    <section class="panel hero productHero productHero--compact">
-      <div class="container">
-        <div class="heroGrid heroGrid--compact">
+<!-- ================================
+     HERO PRODUCT (Gold Card Wrapper)
+     ================================ -->
+<section class="panel hero productHero productHero--compact">
+  <div class="container">
 
-          <!-- LEFT: TEXT -->
-          <div class="heroText heroText--compact">
-            <div class="goldline">Brainwaves • KRUNIKI SoulSync System™</div>
-            <h1>โซลซิงค์ อัลฟา / โซลซิงค์ ธีตา</h1>
+    <!-- GOLD CARD -->
+    <div class="heroGoldCard">
 
-            <p class="lead">
-              ไม่ใช่แค่ “ไฟล์เสียง” —  
-              แต่คือพื้นที่ให้ระบบประสาทได้พัก  
-              ให้หัวใจได้กลับบ้าน และให้ความนิ่งค่อย ๆ เปิดออกอย่างปลอดภัย
-            </p>
+      <div class="heroGrid heroGrid--compact">
 
-            <p>
-              ส่งไฟล์เสียงทาง LINE / Email / Google Drive  
-              เปิดฟังได้ทันทีบนมือถือ iPad และคอมพิวเตอร์
-            </p>
+        <!-- LEFT: TEXT -->
+        <div class="heroText heroText--compact">
+          <div class="goldline">Brainwaves • KRUNIKI SoulSync System™</div>
+          <h1>โซลซิงค์ อัลฟา / โซลซิงค์ ธีตา</h1>
 
+          <p class="lead">
+            ไม่ใช่แค่ “ไฟล์เสียง” —  
+            แต่คือพื้นที่ให้ระบบประสาทได้พัก  
+            ให้หัวใจได้กลับบ้าน และให้ความนิ่งค่อย ๆ เปิดออกอย่างปลอดภัย
+          </p>
+
+          <p>
+            ส่งไฟล์เสียงทาง LINE / Email / Google Drive  
+            เปิดฟังได้ทันทีบนมือถือ iPad และคอมพิวเตอร์
+          </p>
+
+          <!-- CTA BUTTONS -->
+          <div class="heroCtaRow">
+            <a class="btn btnGold" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+              ไปเลือกซื้อใน LINE SHOP
+            </a>
+            <a class="btn btnBlack" href="shop.html">
+              ดูสินค้าทั้งหมด
+            </a>
           </div>
-
-          <!-- RIGHT: IMAGE -->
-          <div class="heroMedia heroMedia--compact">
-            <img
-              src="assets/images/banners/brainwaves-banner.webp"
-              alt="KRUNIKI Brainwaves"
-              class="hero__img hero__img--compact"
-              loading="lazy"
-            />
-          </div>
-
         </div>
-      </div>
-    </section>
 
+        <!-- RIGHT: IMAGE (เดิม / ไม่ลดขนาด) -->
+        <div class="heroMedia heroMedia--compact">
+          <img
+            src="assets/images/banners/brainwaves-banner.webp"
+            alt="KRUNIKI Brainwaves"
+            class="hero__img hero__img--compact"
+            loading="lazy"
+          />
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</section>
     <!-- ================================
          PRODUCT STORY
          ================================ -->
