--- a/shop.html
+++ b/shop.html
@@ -258,8 +258,8 @@
        loading="lazy">
 
   <div class="pBody">
-    <p class="pKicker">Affirmations</p>
-    <h3 class="pTitle">Affirmations</h3>
+    <p class="pKicker">Whisper of heart frequency</p>
+    <h3 class="pTitle">Whisper of heart frequency</h3>
 
     <p class="pDesc">
       ถ้อยคำเยียวยาเพื่อพูดกับตัวเองใหม่—ช่วยค่อย ๆ ปรับ “เสียงในใจ”
@@ -270,7 +270,7 @@
       “ถ้อยคำเพื่อเปลี่ยนความคิด และฟื้นพลังหัวใจ”
     </p>
 
-    <a class="btn btnSoftGold pBtn" href="shop-affirmations.html">
+    <a class="btn btnSoftGold pBtn" href="whisper-of-heart-frequency.html">
       เลือกชุด Affirmations สำหรับคุณ
     </a>
   </div>
