--- a/whisper-of-heart-frequency.html
+++ b/whisper-of-heart-frequency.html
@@ -1,1 +1,370 @@
+<!doctype html>
+<html lang="th">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Whisper of Heart Frequency | KRUNIKI</title>
+  <meta name="description" content="Whisper of Heart Frequency — Whisper Tracks • Brainwave Series by KRUNIKI" />
 
+  <style>
+    :root{
+      --font-brand: "Times New Roman", Times, serif;
+      --font-head:  "Times New Roman", Times, serif;
+    }
+
+    /* ✅ ล็อก 2 คอลัมน์เฉพาะหน้านี้ */
+    body.page--whisper .productGrid{
+      display: grid;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      gap: 16px;
+    }
+    @media (max-width: 720px){
+      body.page--whisper .productGrid{ grid-template-columns: 1fr; }
+    }
+
+    /* ปรับภาพให้เต็มการ์ดแบบสวย (เผื่อ shop.css ไม่กำหนด) */
+    body.page--whisper .pImg{
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+  </style>
+
+  <!-- 🔗 CSS เดิมของนิกี้ -->
+  <link rel="stylesheet" href="assets/css2/app.css">
+  <link rel="stylesheet" href="assets/css2/core/02_base.css">
+  <link rel="stylesheet" href="assets/hamburger.css">
+  <link rel="stylesheet" href="assets/css2/pages/index2.css">
+  <link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
+  <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
+
+  <!-- เฉพาะหน้า shop -->
+  <link rel="stylesheet" href="assets/css2/pages/shop.css">
+  <script src="assets/main.js" defer></script>
+</head>
+
+<body class="page--shop shopPage page--whisper">
+
+  <!-- HEADER (ก็อปปี้จาก shop.html ของนิกี้ 그대로) -->
+  <header class="siteHeader">
+    <div class="navInner">
+
+      <div class="brandBlock">
+        <a class="brand" href="index.html" aria-label="KRUNIKI Home">
+          <span class="dot" aria-hidden="true"></span>
+          <span class="brandText">KRUNIKI</span>
+        </a>
+
+        <div class="topbar">
+          <div class="social" aria-label="ช่องทางโซเชียลของ KRUNIKI">
+            <a class="iconbtn gold" href="https://lin.ee/qdp20di" target="_blank" rel="noopener" aria-label="LINE OA">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path class="fill" d="M12 3C6.5 3 2 6.7 2 11.3c0 2.8 1.7 5.3 4.3 6.9-.1.8-.5 2.7-.5 2.9 0 .3.2.5.5.4.2 0 2.2-1.3 3.3-2 1.1.3 2.2.4 3.4.4 5.5 0 10-3.7 10-8.3S17.5 3 12 3zM8.5 12.8c.4 0 .7.3.7.7s-.3.7-.7.7-.7-.3-.7-.7.3-.7.7-.7zm3.5 0c.4 0 .7.3.7.7s-.3.7-.7.7-.7-.3-.7-.7.3-.7.7-.7zm3.5 0c.4 0 .7.3.7.7s-.3.7-.7.7-.7-.3-.7-.7.3-.7.7-.7z"/>
+              </svg>
+            </a>
+
+            <a class="iconbtn gold" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener" aria-label="LINE SHOP">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path class="stroke" d="M6 8h12l-1 12H7L6 8Z" fill="none" stroke-width="2" stroke-linejoin="round"/>
+                <path class="stroke" d="M9 8a3 3 0 0 1 6 0" fill="none" stroke-width="2" stroke-linecap="round"/>
+                <path class="fill" d="M9.2 12.5h5.6c.5 0 .9.4.9.9v.4c0 1.7-1.4 3.1-3.1 3.1h-1.2c-1.7 0-3.1-1.4-3.1-3.1v-.4c0-.5.4-.9.9-.9Z" opacity=".25"/>
+              </svg>
+            </a>
+
+            <a class="iconbtn" href="https://www.facebook.com/kruniki/" target="_blank" rel="noopener" aria-label="Facebook">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path class="fill" d="M14 8.7V7.3c0-.8.5-1 1.1-1h1V4h-1.8C12.3 4 11 5.3 11 7.2v1.5H9v2.7h2V20h3v-8.6h2.1l.4-2.7H14z"/>
+              </svg>
+            </a>
+
+            <a class="iconbtn" href="https://www.youtube.com/@kruniki" target="_blank" rel="noopener" aria-label="YouTube">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path class="fill" d="M21.6 7.2a2.7 2.7 0 0 0-1.9-1.9C18 4.9 12 4.9 12 4.9s-6 0-7.7.4A2.7 2.7 0 0 0 2.4 7.2 28.4 28.4 0 0 0 2 12a28.4 28.4 0 0 0 .4 4.8 2.7 2.7 0 0 0 1.9 1.9C6 19.1 12 19.1 12 19.1s6 0 7.7-.4a2.7 2.7 0 0 0 1.9-1.9A28.4 28.4 0 0 0 22 12a28.4 28.4 0 0 0-.4-4.8ZM10.2 15.2V8.8L15.8 12l-5.6 3.2Z"/>
+              </svg>
+            </a>
+
+            <a class="iconbtn" href="https://www.tiktok.com/@kruniki.official" target="_blank" rel="noopener" aria-label="TikTok">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path class="fill" d="M15 3c.3 2.5 1.7 4.1 4 4.3v3.1c-1.6.1-3-.4-4-1.1v6.5c0 3-2.4 5.2-5.4 5.2S4.2 19 4.2 16s2.4-5.3 5.4-5.3c.5 0 .9.1 1.3.2v3.3c-.4-.2-.8-.3-1.3-.3-1.2 0-2.2 1-2.2 2.2 0 1.2 1 2.2 2.2 2.2 1.4 0 2.4-1 2.4-2.8V3h3Z"/>
+              </svg>
+            </a>
+
+            <a class="iconbtn" href="https://www.instagram.com/kruniki.official/" target="_blank" rel="noopener" aria-label="Instagram">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path class="stroke" d="M7 3h10a4 4 0 0 1 4 4v10a4 4 0 0 1-4 4H7a4 4 0 0 1-4-4V7a4 4 0 0 1 4-4Z" fill="none" stroke-width="2"/>
+                <path class="stroke" d="M12 11a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z" fill="none" stroke-width="2"/>
+                <circle class="fill" cx="17.5" cy="6.5" r="1.1"/>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <nav class="navLinks" aria-label="Primary navigation">
+        <a href="shop.html">ร้านค้า</a>
+        <a href="index.html">หน้าแรก</a>
+        <a href="about.html">เกี่ยวกับ</a>
+        <a href="services.html">บริการ</a>
+        <a href="resources.html">คลังความรู้</a>
+        <a href="contact.html">ติดต่อ</a>
+      </nav>
+
+      <div class="krActions">
+        <button class="krHam" id="krHam" type="button"
+          aria-label="เปิดเมนู"
+          aria-expanded="false"
+          aria-controls="mobileMenu">
+          <svg class="krHamIcon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+            <path d="M3 6.5h18M3 12h18M3 17.5h18"></path>
+          </svg>
+        </button>
+      </div>
+
+    </div>
+
+    <div id="menuBackdrop" class="menuBackdrop" hidden></div>
+
+    <nav id="mobileMenu" class="mobileMenu" hidden aria-label="Mobile navigation">
+      <a href="shop.html">ร้านค้า</a>
+      <a href="index.html">หน้าแรก</a>
+      <a href="about.html">เกี่ยวกับ</a>
+      <a href="services.html">บริการ</a>
+      <a href="resources.html">คลังความรู้</a>
+      <a href="contact.html">ติดต่อ</a>
+    </nav>
+  </header>
+
+  <!-- ✅ MAIN: โครงเดียวกับ shop.html แต่เนื้อหาเป็น Whisper -->
+  <main class="pageMain shopPage">
+
+    <!-- HERO -->
+    <section id="whisper" class="panel hero">
+      <div class="container">
+
+        <div class="heroGrid">
+
+          <!-- LEFT -->
+          <div class="heroText">
+            <div class="goldline">Connect gently • <strong>Whisper of Heart Frequency</strong></div>
+            <h1>เลือกเสียงกระซิบ + คลื่นสมอง ที่ “พาหัวใจกลับบ้าน”</h1>
+
+            <p class="lead">
+              Whisper of Heart Frequency คือชุดเสียงกระซิบ (Whisper) ที่ออกแบบมาเพื่อสื่อสารกับจิตใต้สำนึกอย่างอ่อนโยน
+              ผสานคลื่นสมองเพื่อช่วยให้ระบบประสาทค่อย ๆ ปล่อย และเปิดรับการเปลี่ยนแปลงได้อย่างเป็นธรรมชาติ
+            </p>
+
+            <div class="ctaRow">
+              <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+                ไปเลือกซื้อใน LINE SHOP
+              </a>
+              <a class="btn" href="#products">ดูสินค้าทั้งหมด</a>
+            </div>
+          </div>
+
+          <!-- RIGHT (CARD) -->
+          <aside class="hero__card" aria-label="Whisper Note">
+            <p class="hero__cardTitle">Whisper of Heart Frequency</p>
+
+            <div class="hero__cardBody">
+              <p>
+                ถ้าคุณเหนื่อยกับ “เสียงในหัว” ที่ไม่อ่อนโยน—ให้เริ่มจากเสียงกระซิบที่ปลอดภัย
+                แล้วค่อย ๆ ปรับคลื่นสมองให้หัวใจกลับมานุ่ม ลึก และมั่นคงอีกครั้ง
+              </p>
+            </div>
+          </aside>
+
+        </div><!-- /heroGrid -->
+
+      </div>
+    </section>
+
+    <!-- BANNER -->
+    <div class="container hero__bannerWrap">
+      <img
+        class="hero__banner"
+        src="assets/images/banners/shop-banner.webp"
+        alt="KRUNIKI — Whisper of Heart Frequency"
+        loading="lazy"
+      />
+    </div>
+
+    <!-- =========================
+        PRODUCTS (2x2)
+    ========================= -->
+    <section id="products" class="panel recommended">
+      <div class="container">
+
+        <header class="sectionHead">
+          <div class="goldline">🎧 Whisper Tracks • Brainwave Series</div>
+          <h2 class="sectionTitle">Whisper of Heart Frequency</h2>
+          <p class="sectionLead">
+            เลือกคลื่นที่เหมาะกับหัวใจคุณตอนนี้ — อ่อนโยน / ลึก / มั่นใจ
+            และเวอร์ชัน I AM Powerful สำหรับการยืนอยู่กับพลังของตัวเอง
+          </p>
+        </header>
+
+        <div class="productGrid">
+
+          <!-- 1 -->
+          <article class="pCard">
+            <img class="pImg"
+                 src="assets/images/whisper-of-heart-frequency/self-love/whisper-self-love-gentle-alpha-60.webp"
+                 alt="Self-Love Whisper — Gentle Self-Love Alpha 60 mins"
+                 loading="lazy">
+            <div class="pBody">
+              <p class="pKicker">Self-Love Whisper™</p>
+              <h3 class="pTitle">รักตัวเองอย่างอ่อนโยน</h3>
+              <p class="pDesc">Alpha • 60 นาที — ปลอบโยนหัวใจ ลดความตึง และพาร่างกายกลับสู่ความอ่อนโยน</p>
+              <p class="pQuote">“Gentle self-love, gentle nervous system.”</p>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+            </div>
+          </article>
+
+          <!-- 2 -->
+          <article class="pCard">
+            <img class="pImg"
+                 src="assets/images/whisper-of-heart-frequency/self-love/whisper-self-love-deep-theta-60.webp"
+                 alt="Self-Love Whisper — Deep Self-Love Theta 60 mins"
+                 loading="lazy">
+            <div class="pBody">
+              <p class="pKicker">Self-Love Whisper™</p>
+              <h3 class="pTitle">รักตัวเองระดับลึก</h3>
+              <p class="pDesc">Theta • 60 นาที — เข้าถึงจิตใต้สำนึก ปลดบล็อก และเยียวยาชั้นลึก</p>
+              <p class="pQuote">“Deep softness, deep healing.”</p>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+            </div>
+          </article>
+
+          <!-- 3 -->
+          <article class="pCard">
+            <img class="pImg"
+                 src="assets/images/whisper-of-heart-frequency/self-love/whisper-self-love-confident-beta-60.webp"
+                 alt="Self-Love Whisper — Confident Self-Love Beta 60 mins"
+                 loading="lazy">
+            <div class="pBody">
+              <p class="pKicker">Self-Love Whisper™</p>
+              <h3 class="pTitle">รักตัวเองอย่างมั่นใจ</h3>
+              <p class="pDesc">Beta • 60 นาที — โฟกัส ชัดเจน และยืนอยู่กับคุณค่าของตัวเอง</p>
+              <p class="pQuote">“Clear mind, confident heart.”</p>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+            </div>
+          </article>
+
+          <!-- 4 -->
+          <article class="pCard">
+            <img class="pImg"
+                 src="assets/images/whisper-of-heart-frequency/series/whisper-self-love-series-alpha-theta-beta.webp"
+                 alt="Self-Love Whisper Series — Alpha Theta Beta"
+                 loading="lazy">
+            <div class="pBody">
+              <p class="pKicker">Series Bundle</p>
+              <h3 class="pTitle">Self-Love Whisper™ (Series)</h3>
+              <p class="pDesc">Alpha–Theta–Beta — ชุดรวม 3 คลื่น: อ่อนโยน / ลึก / มั่นใจ</p>
+              <p class="pQuote">“A complete self-love journey.”</p>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+            </div>
+          </article>
+
+          <!-- 5 -->
+          <article class="pCard">
+            <img class="pImg"
+                 src="assets/images/whisper-of-heart-frequency/iam-powerful/whisper-iam-powerful-alpha-60.webp"
+                 alt="I AM Powerful — Alpha 60 mins"
+                 loading="lazy">
+            <div class="pBody">
+              <p class="pKicker">I AM Powerful</p>
+              <h3 class="pTitle">I Am Powerful</h3>
+              <p class="pDesc">Alpha • 60 นาที — สมองสงบ มั่นคง พร้อมรับคำประกาศพลังใหม่</p>
+              <p class="pQuote">“Stable mind, stable power.”</p>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+            </div>
+          </article>
+
+          <!-- 6 -->
+          <article class="pCard">
+            <img class="pImg"
+                 src="assets/images/whisper-of-heart-frequency/iam-powerful/whisper-iam-powerful-beta-60.webp"
+                 alt="I AM Powerful — Beta 60 mins"
+                 loading="lazy">
+            <div class="pBody">
+              <p class="pKicker">I AM Powerful</p>
+              <h3 class="pTitle">I Am Powerful</h3>
+              <p class="pDesc">Beta • 60 นาที — พลังลงมือทำ ความชัดเจน และสนามพลังที่ “เอาจริง”</p>
+              <p class="pQuote">“Action with inner power.”</p>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+            </div>
+          </article>
+
+          <!-- 7 -->
+          <article class="pCard">
+            <img class="pImg"
+                 src="assets/images/whisper-of-heart-frequency/iam-powerful/whisper-iam-powerful-theta-60.webp"
+                 alt="I AM Powerful — Theta 60 mins"
+                 loading="lazy">
+            <div class="pBody">
+              <p class="pKicker">I AM Powerful</p>
+              <h3 class="pTitle">I Am Powerful</h3>
+              <p class="pDesc">Theta • 60 นาที — ปลดล็อกความเชื่อจำกัด และฝังพลังลงชั้นลึก</p>
+              <p class="pQuote">“Rewrite the subconscious.”</p>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+            </div>
+          </article>
+
+          <!-- 8 -->
+          <article class="pCard">
+            <img class="pImg"
+                 src="assets/images/whisper-of-heart-frequency/series/whisper-iam-powerful-alpha-beta-theta-60.webp"
+                 alt="I AM Powerful Series — Alpha Beta Theta 60 mins"
+                 loading="lazy">
+            <div class="pBody">
+              <p class="pKicker">Series Bundle</p>
+              <h3 class="pTitle">I AM Powerful (Series)</h3>
+              <p class="pDesc">Alpha–Beta–Theta • 60 mins — ชุดรวม 3 คลื่นเพื่อพลังใหม่ที่ครบวงจร</p>
+              <p class="pQuote">“Power, clarity, integration.”</p>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+            </div>
+          </article>
+
+        </div><!-- /productGrid -->
+      </div>
+    </section>
+
+    <!-- Closing CTA (เหมือน shop.html) -->
+    <section class="panel closingCtaSection" aria-label="Closing Call to Action">
+      <div class="container">
+
+        <div class="card cardGold">
+          <div class="cardInner">
+
+            <div class="closingCta">
+              <div class="goldline">Connect gently • เริ่มต้นอย่างอ่อนโยน</div>
+
+              <h2 class="sectionTitle">พร้อมเริ่ม “กลับบ้านที่หัวใจ” แล้วใช่ไหม</h2>
+
+              <p class="sectionLead">
+                เลือก 1 อย่างที่เหมาะกับคุณตอนนี้ แล้วปล่อยให้การเปลี่ยนแปลงค่อย ๆ
+                เปิดออกอย่างเป็นธรรมชาติ
+              </p>
+
+              <div class="ctaRow">
+                <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+                  เปิดร้าน LINE SHOP ตอนนี้
+                </a>
+                <a class="btn" href="index.html">กลับหน้าแรก</a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+
+      <footer>
+        © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
+      </footer>
+    </section>
+
+  </main>
+
+</body>
+</html>
