--- a/service-20min.html
+++ b/service-20min.html
@@ -13,16 +13,23 @@
     }
   </style>
 
-  <!-- 🔗 CSS เดิม (ชุดเดียวกับ shop.html) -->
-  <link rel="stylesheet" href="assets/css2/app.css">
-  <link rel="stylesheet" href="assets/css2/core/02_base.css">
-  <link rel="stylesheet" href="assets/hamburger.css">
-  <link rel="stylesheet" href="assets/css2/pages/index2.css">
-  <link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
-  <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
+ <!-- 🔗 CSS เดิม (ชุดเดียวกับ shop.html) -->
+<link rel="stylesheet" href="assets/css2/app.css">
+<link rel="stylesheet" href="assets/css2/core/02_base.css">
+<link rel="stylesheet" href="assets/hamburger.css">
+<link rel="stylesheet" href="assets/css2/pages/index2.css">
+<link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
+<link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
 
-  <!-- ใช้ shop.css ได้เพราะเราก็อปโครงเดียวกัน (คุมหน้าตาให้เหมือน) -->
-  <link rel="stylesheet" href="assets/css2/pages/shop.css">
+<!-- โครงหน้าตาแบบ shop -->
+<link rel="stylesheet" href="assets/css2/pages/shop.css">
+
+<!-- ✅ เฉพาะหน้า service-20 -->
+<link rel="stylesheet" href="assets/css2/pages/service-20.css">
+
+<!-- ✅ JS คุม hamburger/backdrop -->
+<script src="assets/main.js" defer></script>
+  
 
   <!-- ✅ เพิ่ม CSS เฉพาะหน้า service-20min -->
   <style>
