--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   <script src="assets/main.js" defer></script>
 </head>
 
-<body class="page--shop shopPage">
+<body class="page--shop about">
 
   <!-- HEADER -->
   <header class="siteHeader">
@@ -403,7 +403,7 @@
 
           <figure class="founderMedia">
             <img
-              src="assets/images/about/kruniki-about-founder.webp"
+              src="assets/images/about/kruniki-about-founder_2.webp"
               alt="THANTHITIYA RIANLAHONG (ครูนิกี้) ผู้ก่อตั้ง KRUNIKI"
               loading="lazy"
               decoding="async"
