--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   <script src="assets/main.js" defer></script>
 </head>
 
-<body class="page--shop about">
+<body class="aboutPage">
 
   <!-- HEADER -->
   <header class="siteHeader">
