--- a/service-20min.html
+++ b/service-20min.html
@@ -356,6 +356,14 @@
       document.body.classList.remove('menuOpen');
     })();
   </script>
-
+  
+<style>
+  /* FORCE OVERRIDE: kicker สีทอง เฉพาะ section #details */
+  body.page--shop.shopPage section#details .serviceGrid .pCard .pBody .sKicker{
+    color: #d6b56c !important;
+    opacity: 1 !important;
+  }
+</style>
+  
 </body>
 </html>
