--- a/test-services.html
+++ b/test-services.html
@@ -219,113 +219,113 @@
       SERVICES (2x2 cards แบบ shop.html)
       ใช้ “เนื้อหาเดิมจาก services.html เก่า”
       ========================= -->
-  <section id="services" class="panel recommended">
-    <div class="container">
+<section id="services" class="panel recommended servicesPanel">
+  <div class="container">
 
-      <header class="sectionHead">
-        <div class="goldline">บริการ • Services</div>
-        <h2 class="sectionTitle">เลือกบริการที่พอดีกับหัวใจ “ตอนนี้”</h2>
-        <p class="sectionLead">
-          เริ่มแบบเบา ๆ หรือไปแบบลึกเป็นระบบ — เลือกให้ตรงกับจังหวะชีวิตของคุณ
-        </p>
-      </header>
+    <header class="sectionHead">
+      <div class="goldline">บริการ • Services</div>
+      <h2 class="sectionTitle">เลือกบริการที่พอดีกับหัวใจ “ตอนนี้”</h2>
+      <p class="sectionLead">
+        เริ่มแบบเบา ๆ หรือไปแบบลึกเป็นระบบ — เลือกให้ตรงกับจังหวะชีวิตของคุณ
+      </p>
+    </header>
 
-      <div class="productGrid">
+    <div class="productGrid servicesGrid">
 
-        <!-- 1) 20-Minute Session -->
-        <article class="pCard">
-          <img class="pImg"
-               src="card-heart.webp"
-               alt="KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที"
-               loading="lazy">
-          <div class="pBody">
-            <p class="pKicker">1) 20-Minute Session • Nervous System Reset</p>
-            <h3 class="pTitle">KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
-            <p class="pDesc">
-              เซสชันสั้นแบบมีโครงสร้าง เพื่อช่วยให้คุณกลับสู่ baseline ของระบบประสาท
-              และมีพื้นที่ของหัวใจได้หายใจ โดยไม่เร่ง ไม่ฝืน
-              <br><br>
-              เราใช้หลัก self-regulation (สติ • ความนิ่ง • ลมหายใจ)
-              เพื่อช่วยให้ความตึงค่อย ๆ คลาย และพยุงระบบประสาทให้กลับสู่ความสงบ
-              ในแบบที่เป็นไปได้จริง
-            </p>
-            <p class="pQuote">
-              “ใจนิ่งขึ้นเล็กน้อย” • “หายใจได้เต็มขึ้น” • “คิดชัดขึ้นหนึ่งระดับ”
-            </p>
-            <a class="btn btnSoftGold pBtn" href="service-20min.html">อ่านรายละเอียด</a>
-          </div>
-        </article>
+      <!-- 1) 20-Minute Session -->
+      <article class="pCard">
+        <img class="pImg"
+             src="assets/images/services/card-heart.webp"
+             alt="KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที"
+             loading="lazy">
+        <div class="pBody">
+          <p class="pKicker kickerGold">1) 20-Minute Session • Nervous System Reset</p>
+          <h3 class="pTitle">KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
+          <p class="pDesc">
+            เซสชันสั้นแบบมีโครงสร้าง เพื่อช่วยให้คุณกลับสู่ baseline ของระบบประสาท
+            และมีพื้นที่ของหัวใจได้หายใจ โดยไม่เร่ง ไม่ฝืน
+            <br><br>
+            เราใช้หลัก self-regulation (สติ • ความนิ่ง • ลมหายใจ)
+            เพื่อช่วยให้ความตึงค่อย ๆ คลาย และพยุงระบบประสาทให้กลับสู่ความสงบ
+            ในแบบที่เป็นไปได้จริง
+          </p>
+          <p class="pQuote">
+            “ใจนิ่งขึ้นเล็กน้อย” • “หายใจได้เต็มขึ้น” • “คิดชัดขึ้นหนึ่งระดับ”
+          </p>
+          <a class="btn btnSoftGold pBtn" href="service-20min.html">อ่านรายละเอียด</a>
+        </div>
+      </article>
 
-        <!-- 2) Private Guidance -->
-        <article class="pCard">
-          <img class="pImg"
-               src="card-guidance.webp"
-               alt="KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว"
-               loading="lazy">
-          <div class="pBody">
-            <p class="pKicker">2) Private Guidance</p>
-            <h3 class="pTitle">KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
-            <p class="pDesc">
-              การดูแลต่อเนื่องแบบส่วนตัว สำหรับคนที่อยาก “จัดระบบชีวิต–หัวใจ”
-              ให้ค่อย ๆ มั่นคงขึ้นอย่างเป็นลำดับ
-              เราทำงานแบบมีโครงสร้าง แต่ยังคงความอ่อนโยน:
-              สำรวจจังหวะและ baseline → วางแผนการฝึกที่ทำได้จริง → ติดตามผลและปรับให้เข้ากับชีวิตประจำวัน
-              <br><br>
-              เหมาะกับผู้ที่ต้องการความต่อเนื่องระยะยาว โดยยืนบน self-regulation
-              (สติ • ความนิ่ง • ลมหายใจ) และขอบเขตที่ปลอดภัย
-            </p>
-            <p class="pQuote">
-              “กลับมารู้ตัวได้เร็วขึ้น” • “อารมณ์นิ่งขึ้นทีละน้อย” • “ตัดสินใจชัดขึ้น”
-            </p>
-            <a class="btn btnSoftGold pBtn" href="service-private.html">อ่านรายละเอียด</a>
-          </div>
-        </article>
+      <!-- 2) Private Guidance -->
+      <article class="pCard">
+        <img class="pImg"
+             src="assets/images/services/card-guidance.webp"
+             alt="KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว"
+             loading="lazy">
+        <div class="pBody">
+          <p class="pKicker kickerGold">2) Private Guidance</p>
+          <h3 class="pTitle">KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
+          <p class="pDesc">
+            การดูแลต่อเนื่องแบบส่วนตัว สำหรับคนที่อยาก “จัดระบบชีวิต–หัวใจ”
+            ให้ค่อย ๆ มั่นคงขึ้นอย่างเป็นลำดับ
+            เราทำงานแบบมีโครงสร้าง แต่ยังคงความอ่อนโยน:
+            สำรวจจังหวะและ baseline → วางแผนการฝึกที่ทำได้จริง → ติดตามผลและปรับให้เข้ากับชีวิตประจำวัน
+            <br><br>
+            เหมาะกับผู้ที่ต้องการความต่อเนื่องระยะยาว โดยยืนบน self-regulation
+            (สติ • ความนิ่ง • ลมหายใจ) และขอบเขตที่ปลอดภัย
+          </p>
+          <p class="pQuote">
+            “กลับมารู้ตัวได้เร็วขึ้น” • “อารมณ์นิ่งขึ้นทีละน้อย” • “ตัดสินใจชัดขึ้น”
+          </p>
+          <a class="btn btnSoftGold pBtn" href="service-private.html">อ่านรายละเอียด</a>
+        </div>
+      </article>
 
-        <!-- 3) Programs -->
-        <article class="pCard">
-          <img class="pImg"
-               src="card-system.webp"
-               alt="Programs — เส้นทางเรียนรู้และ Self-Healing ภายใต้ KRUNIKI SoulSync System"
-               loading="lazy">
-          <div class="pBody">
-            <p class="pKicker">3) Programs</p>
-            <h3 class="pTitle">Programs — เส้นทางเรียนรู้ &amp; Self-Healing</h3>
-            <p class="pDesc">
-              เส้นทางหลัก (Main Path) ของ KRUNIKI สำหรับคนที่อยากเปลี่ยนแปลงแบบ “ค่อย ๆ ลึกขึ้น” และอยู่ได้จริง
-              Programs ถูกออกแบบเป็น Learning &amp; Practice ที่ไล่ระดับตามลำดับ
-              เพื่อให้ความนิ่งและความชัด “อยู่กับคุณ” ในชีวิตประจำวัน
-              (ไม่ใช่แค่ดีขึ้นชั่วคราวแล้วหายไป)
-            </p>
-            <p class="pQuote">
-              “ระบบที่ไม่ลอย” • “ความต่อเนื่อง” • “ความมั่นคงภายในที่ทำซ้ำได้”
-            </p>
-            <a class="btn btnSoftGold pBtn" href="service-programs.html">อ่านรายละเอียด</a>
-          </div>
-        </article>
+      <!-- 3) Programs -->
+      <article class="pCard">
+        <img class="pImg"
+             src="assets/images/services/card-system.webp"
+             alt="Programs — เส้นทางเรียนรู้และ Self-Healing ภายใต้ KRUNIKI SoulSync System"
+             loading="lazy">
+        <div class="pBody">
+          <p class="pKicker kickerGold">3) Programs</p>
+          <h3 class="pTitle">Programs — เส้นทางเรียนรู้ &amp; Self-Healing</h3>
+          <p class="pDesc">
+            เส้นทางหลัก (Main Path) ของ KRUNIKI สำหรับคนที่อยากเปลี่ยนแปลงแบบ “ค่อย ๆ ลึกขึ้น” และอยู่ได้จริง
+            Programs ถูกออกแบบเป็น Learning &amp; Practice ที่ไล่ระดับตามลำดับ
+            เพื่อให้ความนิ่งและความชัด “อยู่กับคุณ” ในชีวิตประจำวัน
+            (ไม่ใช่แค่ดีขึ้นชั่วคราวแล้วหายไป)
+          </p>
+          <p class="pQuote">
+            “ระบบที่ไม่ลอย” • “ความต่อเนื่อง” • “ความมั่นคงภายในที่ทำซ้ำได้”
+          </p>
+          <a class="btn btnSoftGold pBtn" href="service-programs.html">อ่านรายละเอียด</a>
+        </div>
+      </article>
 
-        <!-- 4) Tools & Practices -->
-        <article class="pCard pCard--lite">
-          <img class="pImg"
-               src="card-learning.webp"
-               alt="Tools & Practices — เครื่องมือดูแลหัวใจภายใต้ KRUNIKI SoulSync System"
-               loading="lazy">
-          <div class="pBody">
-            <p class="pKicker">Bonus</p>
-            <h3 class="pTitle">Tools &amp; Practices — เครื่องมือดูแลหัวใจ</h3>
-            <p class="pDesc">
-              สำหรับคนที่อยากฝึกเองที่บ้าน: ชุดฝึกเบา-ลึก-ต่อเนื่อง
-              เพื่อช่วยพยุงความนิ่ง และความมั่นคงภายในในจังหวะของคุณ
-            </p>
-            <p class="pQuote">“ฝึกเองได้ • ทำซ้ำได้ • ไม่กดดัน”</p>
-            <a class="btn btnSoftGold pBtn" href="service-tools.html">อ่านรายละเอียด</a>
-          </div>
-        </article>
+      <!-- 4) Tools & Practices -->
+      <article class="pCard pCard--lite">
+        <img class="pImg"
+             src="assets/images/services/card-learning.webp"
+             alt="Tools & Practices — เครื่องมือดูแลหัวใจภายใต้ KRUNIKI SoulSync System"
+             loading="lazy">
+        <div class="pBody">
+          <p class="pKicker kickerGold">Bonus</p>
+          <h3 class="pTitle">Tools &amp; Practices — เครื่องมือดูแลหัวใจ</h3>
+          <p class="pDesc">
+            สำหรับคนที่อยากฝึกเองที่บ้าน: ชุดฝึกเบา-ลึก-ต่อเนื่อง
+            เพื่อช่วยพยุงความนิ่ง และความมั่นคงภายในในจังหวะของคุณ
+          </p>
+          <p class="pQuote">“ฝึกเองได้ • ทำซ้ำได้ • ไม่กดดัน”</p>
+          <a class="btn btnSoftGold pBtn" href="service-tools.html">อ่านรายละเอียด</a>
+        </div>
+      </article>
 
-      </div><!-- /productGrid -->
+    </div><!-- /productGrid -->
 
-    </div>
-  </section>
-
+  </div>
+</section>
+  
   <!-- CTA ปิดท้าย (ยกจาก shop ฟีลเดียวกัน) -->
   <section class="panel closingCtaSection" aria-label="Closing Call to Action">
     <div class="container">
