--- a/test-services.html
+++ b/test-services.html
@@ -53,6 +53,7 @@
 
   <!-- ✅ ใช้ shop.css เพื่อได้ 2x2 card + ปุ่มทอง + kicker ทองเหมือน shop -->
   <link rel="stylesheet" href="assets/css2/pages/shop.css">
+  <link rel="stylesheet" href="assets/css2/pages/services.css">
 
   <script src="assets/main.js" defer></script>
 </head>
