--- a/about.html
+++ b/about.html
@@ -556,9 +556,12 @@
             </p>
 
             <div class="ctaRow">
-              <a class="btn primary" href="index.html">กลับหน้าแรก</a>
-              <a class="btn" href="shop.html">ไปหน้าร้านค้า</a>
-            </div>
+            <a class="btn primary" href="index.html">กลับหน้าแรก</a>
+            <a class="btn" href="shop.html">ไปหน้าร้านค้า</a>
+
+           <!-- ✅ ปุ่มใหม่ (สีทอง) -->
+           <a class="btn primary" href="certification.html">ดูรายละเอียด Certification Program</a>
+           </div>
           </div>
 
         </div>
