--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <span class="btnGhost">ดูรายละเอียดบริการ →</span>
           </div>
         </a>
-        <a href="service-programs.html" class="card cardLink" aria-label="ไปหน้าโปรแกรม Self-Healing">
+        <a href="services.htm" class="card cardLink" aria-label="ไปหน้าโปรแกรม Self-Healing">
           <div class="kicker">Programs</div>
           <h3>โปรแกรม Self-Healing</h3>
           <p>เส้นทางเยียวยาเชิงระบบ ผ่านสติ ความนิ่ง และการฝึกที่ทำได้จริง</p>
