--- a/whisper-of-heart-frequency.html
+++ b/whisper-of-heart-frequency.html
@@ -216,7 +216,7 @@
               <h3 class="pTitle">รักตัวเองอย่างอ่อนโยน</h3>
               <p class="pDesc">Alpha • 60 นาที — ปลอบโยนหัวใจ ลดความตึง และพาร่างกายกลับสู่ความอ่อนโยน</p>
               <p class="pQuote">“Gentle self-love, gentle nervous system.”</p>
-              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k/product/1007888240" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
             </div>
           </article>
 
@@ -231,7 +231,7 @@
               <h3 class="pTitle">รักตัวเองระดับลึก</h3>
               <p class="pDesc">Theta • 60 นาที — เข้าถึงจิตใต้สำนึก ปลดบล็อก และเยียวยาชั้นลึก</p>
               <p class="pQuote">“Deep softness, deep healing.”</p>
-              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k/product/1007889442" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
             </div>
           </article>
 
@@ -246,7 +246,7 @@
               <h3 class="pTitle">รักตัวเองอย่างมั่นใจ</h3>
               <p class="pDesc">Beta • 60 นาที — โฟกัส ชัดเจน และยืนอยู่กับคุณค่าของตัวเอง</p>
               <p class="pQuote">“Clear mind, confident heart.”</p>
-              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k/product/1007889459" rel="noopener">ดู/สั่งซื้อ</a>
             </div>
           </article>
 
@@ -261,7 +261,7 @@
               <h3 class="pTitle">Self-Love Whisper™ (Series)</h3>
               <p class="pDesc">Alpha–Theta–Beta — ชุดรวม 3 คลื่น: อ่อนโยน / ลึก / มั่นใจ</p>
               <p class="pQuote">“A complete self-love journey.”</p>
-              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ดู/สั่งซื้อ</a>
+              <a class="btn btnSoftGold pBtn" href="https://shop.line.me/@mew3619k/product/1007889476" rel="noopener">ดู/สั่งซื้อ</a>
             </div>
           </article>
 
