--- a/practices.html
+++ b/practices.html
@@ -174,6 +174,13 @@
             <br>
             “A good practice doesn’t have to be long — it must be safe, doable, and consistent.”
           </p>
+          <!-- ✨ Added supporting text -->
+  <div class="quoteNote">
+    หลักการฝึกของ KRUNIKI เน้นการทำงานร่วมกับระบบประสาทอย่างอ่อนโยน  
+    ไม่เร่ง ไม่ฝืน และไม่กระตุ้นเกินความพร้อมของร่างกายและจิตใจในแต่ละวัน
+    <br><br>
+    This framework is designed to support regulation and internal safety  
+    through short, gentle, and repeatable practices.
         </div>
       </div>
     </section>
