--- a/service-20min.html
+++ b/service-20min.html
@@ -225,8 +225,8 @@
       <div class="container">
 
         <header class="sectionHead">
-          <div class="goldline">✨ What this service holds • ภาพรวมบริการ</div>
-          <h2 class="sectionTitle">รายละเอียดแบบชัด ๆ (2x2)</h2>
+          <div class="goldline">What this service holds • ภาพรวมบริการ</div>
+          <h2 class="sectionTitle">รายละเอียด</h2>
           <p class="sectionLead">
             อ่านง่าย ตัดสินใจง่าย — เขียน “พอให้ตัดสินใจได้” โดยไม่เปิดเผยขั้นตอนภายในลึกเกินไป
           </p>
